--- a/client/public/assets/scss/blog/_blog-details.scss
+++ b/client/public/assets/scss/blog/_blog-details.scss
@@ -1,6 +1,23 @@
 /*----------------------
-BLog Details Styles 
+Blog Details Styles 
 ------------------------*/
+.code-snippet {
+    position: relative;
+}
+
+.copy-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #f0f0f0;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
 
 .blog-single-page-title {
     position: relative;
@@ -40,7 +57,7 @@ BLog Details Styles
 .rn-blog-details {
     .inner-wrapper {
         .inner {
-            padding: 0 110px;
+            padding: 0 0px;
             @media #{$lg-layout} {
                 padding: 0 40px;
             }
@@ -60,13 +77,7 @@ BLog Details Styles
                 }
             }
             .thumbnail {
-                margin: 0 -110px;
-                @media #{$sm-layout} {
-                    margin: 0;
-                }
-                @media #{$md-layout} {
-                    margin: 0;
-                }
+                margin: 20px 0;
                 img {
                     width: 100%;
                 }
@@ -125,27 +136,10 @@ BLog Details Styles
             }
         }
         .blog-single-list-wrapper {
-            margin-right: -110px;
-            
-            @media #{$sm-layout} {
-                margin-right: 0;
-            }
-
-            @media #{$md-layout} {
-                margin-right: 0;
-            }
+            margin-right: 0;
             .thumbnail {
-                width: 55%;
-                padding-right: 30px;
-                margin-right: 0;
-                @media #{$sm-layout} {
-                    width: 100%;
-                    padding-right: 0;
-                }
-                @media #{$md-layout} {
-                    width: 100%;
-                    padding-right: 0;
-                }
+                width: 100%;
+                padding-right: 0;
                 img {
                     width: 100%;
                 }
@@ -155,16 +149,11 @@ BLog Details Styles
                     display: block;
                     text-align: left;
                     padding-top: 10px;
-                    padding-left: 110px;
-                    @media #{$sm-layout} {
-                        font-size: 13px;
-                        padding-left: 0;
-                        margin-bottom: 23px;
-                    }
+                    margin-bottom: 23px;
                 }
             }
-            h4{
-                &.title{
+            h4 {
+                &.title {
                     font-size: 24px;
                     font-weight: 500;
                     margin-bottom: 30px;
@@ -174,14 +163,7 @@ BLog Details Styles
                 }
             }
             .content {
-                width: 45%;
-
-                @media #{$sm-layout} {
-                    width: 100%;
-                }
-                @media #{$md-layout} {
-                    width: 100%;
-                }
+                width: 100%;
                 ul {
                    &.list-style {
                        margin-bottom: 50px;
