--- a/client/public/assets/scss/blog/_blog-details.scss
+++ b/client/public/assets/scss/blog/_blog-details.scss
@@ -1,32 +1,34 @@
-
 @media (max-width: 768px) {
     .installation-steps {
-      ol {
-        padding-left: 0;
-  
-        li {
-          .code-snippet {
-            pre {
-              padding-right: 80px; /* Add padding to avoid text overlap with the button */
+        ol {
+            padding-left: 0;
+
+            li {
+                .code-snippet {
+                    pre {
+                        padding-right: 80px;
+                        /* Add padding to avoid text overlap with the button */
+                    }
+                }
             }
-  
-            
-          }
         }
-    }}}
+    }
+}
+
 .code-snippet {
     position: relative;
     margin: 20px 0;
+
     pre {
-      background: black !important;
-      color: white !important;
-      padding: 20px;
-      border-radius: 5px;
-      overflow-x: auto;
+        background: black !important;
+        color: white !important;
+        padding: 20px;
+        border-radius: 5px;
+        overflow-x: auto;
     }
-  }
-  
-  .copy-button {
+}
+
+.copy-button {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -39,16 +41,16 @@
     align-items: center;
     gap: 5px;
     z-index: 1;
-  }
-  
-  @media (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
     .copy-button {
-      top: 5px;
-      right: 5px;
-      padding: 3px 7px;
+        top: 5px;
+        right: 5px;
+        padding: 3px 7px;
     }
-  }
-  
+}
+
 .comment {
     border-bottom: 1px solid #ddd;
     padding: 10px 0;
