--- a/client/public/assets/scss/header/_mainmenu.scss
+++ b/client/public/assets/scss/header/_mainmenu.scss
@@ -23,11 +23,11 @@ Mainmenu Area
                 > ul {
                     &.submenu {
                         @extend %liststyle;
-                        min-width: 240px;
+                        min-width: 50px;
                         height: auto;
                         position: absolute;
                         top: 100%;
-                        left: 0;
+                        left: -30%;
                         z-index: 90;
                         opacity: 0;
                         visibility: hidden;
@@ -52,6 +52,8 @@ Mainmenu Area
                             }
                             &:hover {
                                 > a {
+                                min-width: 50px;
+
                                     color: $theme-color;
                                     background: rgba(249, 0, 77, 0.07);
                                 }
@@ -59,7 +61,7 @@ Mainmenu Area
 
                             .submenu {
                                 @extend %liststyle;
-                                min-width: 240px;
+                                min-width: 50px;
                                 height: auto;
                                 position: absolute;
                                 top: 0;
@@ -88,6 +90,7 @@ Mainmenu Area
                 &:hover {
                     > ul {
                         &.submenu {
+                            min-width: 50px;
                             opacity: 1;
                             visibility: visible;
                         }
@@ -96,6 +99,7 @@ Mainmenu Area
 
                 &:hover {
                     > a {
+                        min-width: 50px;
                         color: $theme-color;
                     }
                 }
