--- a/client/src/elements/login/LoginForm.css
+++ b/client/src/elements/login/LoginForm.css
@@ -1,26 +1,42 @@
 .button-group {
     display: flex;
     align-items: center;
-    gap: 10px; /* Adjust spacing between buttons as needed */
+    gap: 10px;
     margin-top: 20px;
-  }
-  
-  .google-button {
+    justify-content: space-between;
+    /* padding-left: 30px;
+    padding-right: 30px; */
+    flex-wrap: wrap; /* Allows wrapping of items on smaller screens */
+}
+
+
+.rn-button-style--2.btn-solid {
+    width: 216px;
+    height: 40px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    background: white;
-    border: 1px solid #ddd;
+    background: linear-gradient(135deg, #ff79c6 0%, #61afef 100%);
+    border: none;
     border-radius: 4px;
-    padding: 10px 15px;
+    padding: 10px 20px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .google-button:hover {
-    background-color: #f1f1f1;
-  }
-  
-  .google-button:disabled {
-    cursor: not-allowed;
-  }
-  
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+    color: white;
+    font-size: 14px;
+}
+
+@media (max-width: 768px) {
+   .button-group {
+        flex-direction: column; /* Stacks buttons vertically on small screens */
+        align-items: stretch; /* Aligns buttons to full width */
+    }
+
+   .google-button,
+   .rn-button-style--2.btn-solid {
+        width: 216px; /* Buttons take full width on small screens */
+        margin-bottom: 10px; /* Adds space between stacked buttons */
+    }
+}
