--- a/client/src/elements/order/order.css
+++ b/client/src/elements/order/order.css
@@ -1,4 +1,3 @@
-/* src/order.css */
 .orders-container {
     display: flex;
     flex-wrap: wrap;
@@ -17,6 +16,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     transition: transform 0.2s;
+    cursor: pointer; /* Make the card look clickable */
 }
 
 .order-card:hover {
@@ -39,6 +39,10 @@
     margin-top: 10px;
 }
 
+.payment-status {
+    /* color: green; */
+}
+
 .order-actions {
     display: flex;
     justify-content: space-between;
@@ -56,17 +60,8 @@
 
 .order-actions button:hover {
     background-color: #ffffff;
-    color: #f9004d ;
-    border: 2px solid #f9004d
-}
-
-.view-details {
-    color: red;
-    text-decoration: none;
-}
-
-.view-details:hover {
-    text-decoration: underline;
+    color: #f9004d;
+    border: 2px solid #f9004d;
 }
 
 @media (max-width: 768px) {
