--- a/client/src/elements/order/order.css
+++ b/client/src/elements/order/order.css
@@ -16,7 +16,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     transition: transform 0.2s;
-    cursor: pointer; /* Make the card look clickable */
+            cursor: pointer;
 }
 
 .order-card:hover {
@@ -37,10 +37,6 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
-}
-
-.payment-status {
-    /* color: green; */
 }
 
 .order-actions {
