--- a/client/src/elements/order/order.css
+++ b/client/src/elements/order/order.css
@@ -16,48 +16,91 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     transition: transform 0.2s;
-            cursor: pointer;
+    cursor: pointer;
 }
 
 .order-card:hover {
     transform: translateY(-5px);
 }
 
-.order-header {
+.order-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #eaeaea;
-    padding-bottom: 10px;
     margin-bottom: 10px;
 }
 
+.order-info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.order-title {
+    font-size: 16px;
+    margin: 0 0 5px 0;
+    flex: 1;
+    word-wrap: break-word;
+}
+
+.order-date, .order-id {
+    font-size: 12px;
+    margin: 0;
+}
+
+.order-image {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-left: 2px;
+}
+
 .order-details {
+    border-top: 1px solid #eaeaea;
+    padding-top: 10px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.order-actions {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+.order-details p {
+    margin: 5px 0;
+    font-size: 14px;
 }
 
-.order-actions button {
+.order-download-button {
+    align-self: flex-end;
     background-color: #f9004d;
     color: white;
     border: none;
     border-radius: 5px;
-    padding: 10px 20px;
+    padding: 5px 10px;
     cursor: pointer;
 }
 
-.order-actions button:hover {
+.order-download-button:hover {
     background-color: #ffffff;
     color: #f9004d;
     border: 2px solid #f9004d;
+}
+
+@media (min-width: 768px) {
+    .order-details {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: start;
+        
+    }
+    
+    .order-details p {
+        margin: 0 10px 0 0;
+        font-size: 14px;
+    }
+    
+    .order-download-button {
+        margin-top: -32px;
+        width: auto;
+    }
 }
 
 @media (max-width: 768px) {
@@ -67,18 +110,25 @@
         margin: 10px 0;
     }
 
-    .order-details {
+    .order-top {
         flex-direction: column;
         align-items: flex-start;
     }
 
-    .order-actions {
-        flex-direction: column;
-        align-items: stretch;
+    .order-info {
+        margin-bottom: 10px;
     }
 
-    .order-actions button {
+    .order-details {
+        align-items: flex-start;
+    }
+    .order-details p {
+        margin: 0 10px 0 0;
+        font-size: 14px;
+    }
+
+    .order-download-button {
+        margin-top: 7px;
         width: 100%;
-        margin-bottom: 10px;
     }
 }
