--- a/client/src/elements/profile/UserProfile.css
+++ b/client/src/elements/profile/UserProfile.css
@@ -3,6 +3,7 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    position: relative; /* Add this to position the button */
 }
 
 .profile-header {
@@ -87,11 +88,14 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 @media (min-width: 768px) {
     .profile-actions {
+        position: absolute;
+        top: 20px;
+        right: 20px;
         justify-content: flex-end;
     }
 }
@@ -126,7 +130,6 @@
         width: 100%;
         justify-content: center;
     }
-    
 }
 
 .profile-label {
@@ -154,6 +157,6 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    width: 100%;
+    width: 270px;
     justify-content: center;
 }
