--- a/client/src/elements/extension/extension.css
+++ b/client/src/elements/extension/extension.css
@@ -61,7 +61,7 @@
 
 .main-image {
     width: 100%;
-    height: auto;
+    height: 420px;
     border-radius: 10px; /* Add border radius */
 }
 
@@ -104,12 +104,14 @@
 }
 
 .info-box {
-    background-color: #f9f9f9;
-    padding: 12px;
+    background-color: #ededed;
+    padding: 10px;
     border-radius: 5px;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
 }
-
+.info-box p{
+    font-size: small;
+}
 .price-box {
     margin-bottom: 20px;
 }
@@ -141,13 +143,13 @@
 
 .bottom-section {
     display: flex;
-    padding: 20px;
+    padding: 0px;
     flex-wrap: wrap; /* Enable wrapping for smaller screens */
 }
 
 .main-content, .bottom-section {
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .sidebar {
@@ -220,6 +222,9 @@
     .content {
         margin-top: 20px;
     }
+    .thumbnails {
+        justify-content: center;
+    }
 }
 
 
@@ -227,7 +232,7 @@
 
 .bottom-section {
     display: flex;
-    padding: 20px;
+    padding: 20px 0px;
     flex-wrap: nowrap; /* Ensure no wrap for larger screens */
     align-items: flex-start; /* Align items to the top */
 }
@@ -295,11 +300,11 @@
 /* Ensure to handle smaller screens in media query */
 @media (max-width: 768px) {
     .App {
-        padding: 20px; /* Adjust padding for smaller screens */
+        /* padding: 20px;  */
     }
 
     .main-content, .bottom-section {
-        padding-left: 20px;
-        padding-right: 20px;
+        /* padding-left: 20px; */
+        /* padding-right: 20px; */
     }
 }
