--- a/client/public/assets/scss/elements/_profile.scss
+++ b/client/public/assets/scss/elements/_profile.scss
@@ -91,24 +91,6 @@ a {
     margin-left: 20px !important;
 }
 
-// Media queries for responsive design
-@media (max-width: 768px) {
-    .button-group {
-        flex-direction: column;
-        /* Stacks buttons vertically on small screens */
-        align-items: stretch;
-        /* Aligns buttons to full width */
-    }
-
-    .google-button,
-    .rn-button-style--2.btn-solid {
-        width: 216px;
-        /* Buttons take full width on small screens */
-        margin-bottom: 10px;
-        /* Adds space between stacked buttons */
-    }
-}
-
 
 // Styles for forgot password form
 .forgot-password-container {
@@ -137,8 +119,8 @@ a {
 .form-wrapper {
     background: #fff;
     padding: 30px;
-    box-shadow: 0px 10px 30px rgba(219, 0, 0, 0.2);
-    border-radius:5px;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
 }
 
 .form-wrapper form {
@@ -196,8 +178,16 @@ a {
 
 @media (max-width: 768px) {
     .form-wrapper form {
-        margin-left: 0px!important;
+        margin-left: 0px !important;
         margin-right: 0px !important;
+    }
+
+    .container {
+        padding: 0 5px;
+    }
+
+    .section-title-zv .title {
+        font-size: 30px;
     }
 
     .signup-link {
@@ -227,4 +217,22 @@ a {
         font-size: small;
 
     }
+    .form-wrapper {
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+    }
+    .button-group {
+        flex-direction: column;
+        /* Stacks buttons vertically on small screens */
+        align-items: stretch;
+        /* Aligns buttons to full width */
+    }
+
+    .google-button,
+    .rn-button-style--2.btn-solid {
+        width: 216px;
+        /* Buttons take full width on small screens */
+        margin-bottom: 10px;
+        /* Adds space between stacked buttons */
+    }
+
 }
