--- a/client/public/assets/scss/elements/_profile.scss
+++ b/client/public/assets/scss/elements/_profile.scss
@@ -182,8 +182,8 @@ a {
         margin-right: 0px !important;
     }
 
-    .container {
-        padding: 0 5px;
+    .profile-container {
+        padding: 0 25px;
     }
 
     .section-title-zv .title {
